@@ -1,3 +1,4 @@
 [actions]
 action.success=traverse_to:string:login_success
 action.failure=traverse_to:string:login_failed
+action.duplicates=traverse_to:string:email_duplicates
